fix centering tiles on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,10 @@ h1{
   .project-link{
     
     max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+     
+     
 
   }
 } 
